@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add support for closures taking records pass-by-value (gh#312)
 
 1.38      2021-03-08 17:13:15 -0700
   - Production release identical to 1.37_01
